cmake_minimum_required(VERSION 3.15) 
project(Engine)        

add_subdirectory(GeometricTools)
add_subdirectory(GLFWApplication)
add_subdirectory(IndexBuffer)
add_subdirectory(VertexBuffer)
add_subdirectory(VertexArray)
add_subdirectory(Shaders)
add_subdirectory(RenderCommands)
add_subdirectory(TextureManager)



