add_executable(          # This command will instruct CMake to generate a executable [7]
  HelloWorld             # This parameter is the name of the executable
  main.cpp               # This parameter (and possibly subsequent) are the source code files
                         # participating in the compilation.
)
